@@ -16,6 +16,7 @@
   * Add Enumerable#replace
   * Add Enumerable#keys
   * Add Enumerable#values
+  * Add Enumerable#values_at
 
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
